--- a/UniEMIR.ipynb
+++ b/UniEMIR.ipynb
@@ -6,7 +6,7 @@
         "id": "hxuwBSFDhghn"
       },
       "source": [
-        "# Pushing high-quality ultrastructural imaging limits with a foundational restoration model for volume electron microscopy\n",
+        "# UniEMIR Colab Demo\n",
         "This demo allows you to run the models on your own images or the examples from the paper. Please refer to the paper for more details."
       ]
     },
